tests/sumo/spec/departure/errors/depart_unsorted/log.sumo.meso
Loading net-file from 'net.net.xml' ... done (1ms).
Warning: Network contains internal links which are ignored. Vehicles will 'jump' across junctions and thus underestimate route lengths and travel times.
Loading additional-files from 'input_routes.rou.xml' ... done (0ms).
Loading route-files incrementally from 'input_additional.add.xml'
Loading done.
Simulation version v1_23_1+0585-24e5b338460 started with time: 0.00.
Warning: Route file should be sorted by departure time, ignoring 'b'!
Simulation ended at time: 144.00.
Reason: All vehicles have left the simulation.
